# infra

./: pyproject.toml
.github/workflows/: ci.yml
3proxy/: .env.example  README.md  docker-compose.yml
3proxy/scripts/: generate-3proxy-cfg.sh
beszel/: .env.example  .gitignore  README.md  docker-compose.yml
beszel/scripts/: enable-local-agent.sh
bugsink/: .env.example  README.md  docker-compose.yml
docs/go-client/: .env.example  Dockerfile  README.md  docker-compose.yml  go.mod  main.go
freshrss/: .env.example  .gitignore  README.md  docker-compose.yml
ipsec-vpn/: .env.example  README.md  docker-compose.yml
portainer/: .env.example  README.md  docker-compose.yml
postgres/: .env.example  README.md  docker-compose.yml
postgres-backup/: .env.example  Dockerfile  README.md  backup.sh  docker-compose.yml  entrypoint.sh
postgres/init/: 01-flask-weather.sh  20-extra-databases.sh.example
postgres/scripts/: create-database.sh  setup-vps.sh
redis/: .env.example  README.md  docker-compose.yml  redis.conf
reverse-proxy/: .env.example  .gitignore  Caddyfile.example  README.md  docker-compose.yml
static-web/: .env.example  README.md  docker-compose.yml
tests/: conftest.py  helpers.py  test_3proxy.py  test_beszel.py  test_bugsink.py  test_freshrss.py  test_ipsec_vpn.py  test_portainer.py  test_postgres.py  test_postgres_backup.py  test_redis.py  test_reverse_proxy.py  test_static_web.py  test_uptime_kuma.py  test_wg_easy.py
uptime-kuma/: .env.example  README.md  docker-compose.yml
wg-easy/: .env.example  README.md  docker-compose.yml
(+1 files in other folders)
