[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "infra-tests"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
markers = [
    "proxy: 3proxy stack tests",
    "postgres: PostgreSQL stack tests",
    "redis: Redis stack tests",
    "wg_easy: wg-easy stack tests",
    "static_web: static-web stack tests",
    "freshrss: FreshRSS stack tests",
    "uptime_kuma: Uptime Kuma stack tests",
    "beszel: Beszel stack tests",
    "portainer: Portainer stack tests",
    "bugsink: Bugsink stack tests",
    "reverse_proxy: reverse-proxy stack tests",
    "integration: tests that start Docker containers",
]
